# tms_nets

./: .buildinfo  api.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tmsnets.html
.doctrees/: api.doctree  environment.pickle  index.doctree  modules.doctree  tmsnets.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/tmsnets/: core.html
_sources/: modules.rst.txt  tmsnets.rst.txt
docs/: conf.py  requirements.txt
docs/source/: api.rst  conf.py  index.rst
research/: RL_extension.py  cbc_RL.py  genetic_algorithms.py  simulated_annealing.py
tms-nets/: __init__.py  core.py  utils.py
tmsnets/: __init__.py  core.py  tests.py
