[project]
name = "tmsnets"
[tool.setuptools]
packages = ["tmsnets"]
version = "0.1.0"
description = "high-performance implementation (t,m,s)-nets via Niederreiter algorithm"
authors = [{ name="Arsenii Sychev", email="arseniysychev2015@gmail.com" }]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "pandas",
    "galois",
    "scikit-learn",
    "matplotlib"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
